# blockchain-demo

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
pages/: animationwidget.cpp  animationwidget.h  animationwidget.ui  loggerwidget.cpp  loggerwidget.h  settingwidget.cpp  settingwidget.h  settingwidget.ui  usagewidget.cpp  usagewidget.h  usagewidget.ui
pages/animation/: animationscene.cpp  animationscene.h  graphicsview.cpp  graphicsview.h  legenditem.cpp  legenditem.h  shard.cpp  shard.h  struct.h
res/: icons.qrc
res/icon/: icon.qrc
res/styles/: global copy.qss  global.qss  styles.qrc
src/: BlockChain.cpp  BlockChain.hpp  BlockChainDemo.cpp  BlockChainDemo.hpp  CMakeLists.txt  Controler.cpp  Controler.hpp  Message.cpp  Message.hpp  Node.hpp  Renderer.cpp  Renderer.hpp  Shard.cpp  Shard.hpp  Struct.hpp  config.h
src/utils/: Application.cpp  Application.hpp  CMakeLists.txt  EventManager.hpp  Logger.hpp  SceneContext.hpp
utils/: legendwidget.cpp  legendwidget.h  loggermanager.cpp  loggermanager.h  multicombobox.cpp  multicombobox.h
